# econscope

./: .env.example  .gitignore  ARCHITECTURE.md  INTEL_USAGE.md  README.md  pyproject.toml  sources.yaml
docs/: index.html
docs/css/: style.css
docs/js/: shader.js
econscope/: __init__.py  cli.py  cli_intel.py  config.py
econscope/adapters/: base.py  bea.py  bis.py  bls.py  census.py  coingecko.py  comtrade.py  courtlistener.py  dbnomics.py  eia.py  epa.py  eurostat.py  faostat.py  fdic.py  finnhub.py  fmp.py  fred.py  gdelt.py  imf.py  noaa.py  oecd.py  opensanctions.py  patents.py  redfin.py  sec_edgar.py  treasury.py  usaspending.py  usda.py  usgs.py  worldbank.py
econscope/analyze/: __init__.py  decomposition.py  elasticity.py  monte_carlo.py
econscope/engine/: __init__.py  core.py
econscope/intel/: __init__.py  forensic.py  http.py  network.py  proxies.py  textdiff.py
econscope/report/: __init__.py  charts.py  network_viz.py  render.py
econscope/store/: warehouse.py
go-ingest/: go.mod  go.sum  loader.sql
go-ingest/cmd/econscope-ingest/: main.go
go-ingest/internal/adapter/: adapter.go  treasury.go
go-ingest/internal/ratelimit/: pool.go
go-ingest/internal/staging/: writer.go
scripts/: register_apis.sh  verify_keys.py
tests/: conftest.py  test_intel_smoke.py  test_warehouse.py
tests/adapters/: test_bea.py  test_bls.py  test_census.py  test_comtrade.py  test_dbnomics.py  test_eia.py  test_finnhub.py  test_fmp.py  test_fred.py  test_treasury.py  test_worldbank.py
