[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "econscope"
version = "0.1.0"
description = "Unified economic intelligence platform"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
econscope = "econscope.cli:app"

[tool.setuptools.packages.find]
include = ["econscope*"]
